--- a/technic.html
+++ b/technic.html
@@ -62,70 +62,109 @@
             </div>
             <div class="gallery__box" id="products">
                 <div class="gallery__item" data-price="155"><a href="cargo-evacuator.html">
-                    <img class="gallery__img" src="img/technic/technic-img-1.png">
+                    <img class="gallery__img" src="img/technic/technic-img-1.png"></a>
                     <p class="gallery__title">Cargo Evacuator</p>
                     <p class="gallery__price"><strong>155$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="130"><a href="ford-f-150-raptor.html">
-                    <img class="gallery__img" src="img/technic/technic-img-2.png">
+                    <img class="gallery__img" src="img/technic/technic-img-2.png"></a>
                     <p class="gallery__title">Ford F-150 Raptor</p>
                     <p class="gallery__price"><strong>130$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="75"><a href="heavy-excavator.html">
-                    <img class="gallery__img" src="img/technic/technic-img-3.png">
+                    <img class="gallery__img" src="img/technic/technic-img-3.png"></a>
                     <p class="gallery__title">Heavy excavator</p>
                     <p class="gallery__price"><strong>75$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="155"><a href="cargo-helicopter.html">
-                    <img class="gallery__img" src="img/technic/technic-img-4.png">
+                    <img class="gallery__img" src="img/technic/technic-img-4.png"></a>
                     <p class="gallery__title">Cargo helicopter</p>
                     <p class="gallery__price"><strong>155$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="300"><a href="crawler-crane.html">
-                    <img class="gallery__img" src="img/technic/technic-img-5.png">
+                    <img class="gallery__img" src="img/technic/technic-img-5.png"></a>
                     <p class="gallery__title">Crawler Crane</p>
                     <p class="gallery__price"><strong>300$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="700"><a href="bell-boeing-v-22-OSPREY.html">
-                    <img class="gallery__img" src="img/technic/technic-img-6.png">
+                    <img class="gallery__img" src="img/technic/technic-img-6.png"></a>
                     <p class="gallery__title">Bell-Boeing V-22 OSPREY</p>
                     <p class="gallery__price"><strong>700$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="275"><a href="extreme-SUV-4x4.html">
-                    <img class="gallery__img" src="img/technic/technic-img-7.png">
+                    <img class="gallery__img" src="img/technic/technic-img-7.png"></a>
                     <p class="gallery__title">Extreme SUV 4x4</p>
                     <p class="gallery__price"><strong>275$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="320"><a href="porsche-911-GT3-RS.html">
-                    <img class="gallery__img" src="img/technic/technic-img-8.png">
+                    <img class="gallery__img" src="img/technic/technic-img-8.png"></a>
                     <p class="gallery__title">Porsche 911 GT3 RS</p>
                     <p class="gallery__price"><strong>320$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="140"><a href="racing-top-gear-car-on-management.html">
-                    <img class="gallery__img" src="img/technic/technic-img-9.png">
+                    <img class="gallery__img" src="img/technic/technic-img-9.png"></a>
                     <p class="gallery__title">Racing Top Gear Car on Management</p>
                     <p class="gallery__price"><strong>140$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="125"><a href="concrete-mixer.html">
-                    <img class="gallery__img" src="img/technic/technic-img-10.png">
+                    <img class="gallery__img" src="img/technic/technic-img-10.png"></a>
                     <p class="gallery__title">Concrete mixer</p>
                     <p class="gallery__price"><strong>125$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="420"><a href="bulldozer-CAT-D11T.html">
-                    <img class="gallery__img" src="img/technic/technic-img-11.png">
+                    <img class="gallery__img" src="img/technic/technic-img-11.png"></a>
                     <p class="gallery__title">Bulldozer CAT D11T</p>
                     <p class="gallery__price"><strong>420$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="200"><a href="mobile-crane.html">
-                    <img class="gallery__img" src="img/technic/technic-img-12.png">
+                    <img class="gallery__img" src="img/technic/technic-img-12.png"></a>
                     <p class="gallery__title">Mobile crane</p>
                     <p class="gallery__price"><strong>200$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="300"><a href="supermined-fighter.html">
-                    <img class="gallery__img" src="img/technic/technic-img-13.png">
+                    <img class="gallery__img" src="img/technic/technic-img-13.png"></a>
                     <p class="gallery__title">Supermined fighter</p>
                     <p class="gallery__price"><strong>300$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
             </div>
             <div class="load__more">
                 <button class="load__button" type="button">Load more</button>
