--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,25 @@
     <link rel="stylesheet" href="css/media.css">
 	<title>Home</title>
 </head>
+<style>
+.gallery__button {
+    width: 150px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background: #151C22;
+    transition: all 2s ease;
+}
+.gallery__button:hover{
+    background: #6e6363;
+}
+.add__to__cart {
+    color: #fff;
+    font-size: 16px;
+}	
+</style>
 <body>
 	<div class="wrapper">
 		<nav class="nav">
