--- a/city.html
+++ b/city.html
@@ -35,7 +35,7 @@
                     <input id="text-to-find" type="text" name="" class="search-txt" placeholder="Type to search"/>
                     <button class="search-btn" type="submit" onclick="javascript: FindOnPage('text-to-find',true); return false;"></button>
                 </form>
-                <a href="#!"><button data-count="1" id="shopping-basket" class="nav__img shopping-basket"></button></a>
+                <a href="#!"><button data-count="" id="shopping-basket" class="nav__img shopping-basket"></button></a>
             </div>
         </nav>
         <header class="header" id="category">
